@@ -12,9 +12,14 @@ $_lang['pdotools_prop_first'] = 'Номер первой итерации выв
 $_lang['pdotools_prop_hideContainers'] = 'Отключает вывод контейнеров, то есть, ресурсов с isfolder = 1.';
 $_lang['pdotools_prop_idx'] = 'Вы можете указать стартовый номер итерации вывода результатов.';
 $_lang['pdotools_prop_includeContent'] = 'Включаем поле "content" в выборку.';
+
 $_lang['pdotools_prop_includeTVs'] = 'Список ТВ параметров для выборки, через запятую. Например: "action,time" дадут плейсхолдеры [[+action]] и [[+time]].';
 $_lang['pdotools_prop_prepareTVs'] = 'Список ТВ параметров, которые нужно подготовить перед выводом. По умолчанию, установлено в "1", что означает подготовку всех ТВ, указанных в "&includeTVs=``"';
 $_lang['pdotools_prop_processTVs'] = 'Список ТВ параметров, которые нужно обработать перед выводом. Если установить в "1" - будут обработаны все ТВ, указанные в "&includeTVs=``". По умолчанию параметр пуст.';
+$_lang['pdotools_prop_tvFilters'] = 'Список фильтрова по ТВ, с разделителями AND и OR. Разделитель, указанный в параметре "&tvFiltersOrDelimiter" представляет логическое условие OR и по нему условия группируются в первую очередь.  Внутри каждой группы вы можете задать список значений, разделив их "&tvFiltersAndDelimiter". Поиск значений может проводиться в каком-то конкретном ТВ, если он указан ("myTV==value"), или в любом ("value"). Пример вызова: "&tvFilters=`filter2==one,filter1==bar%||filter1==foo`". <br />Обратите внимание: фильтрация использует оператор LIKE и знак "%" является метасимволом. <br />И еще: Поиск идёт по значениям, которые физически находятся в БД, то есть, сюда не подставляются значения по умолчанию из настроек ТВ.';
+$_lang['pdotools_prop_tvFiltersAndDelimiter'] = 'Разделитель для условий AND в параметре "&tvFilters". По умолчанию: ",".';
+$_lang['pdotools_prop_tvFiltersOrDelimiter'] = 'Разделитель для условий OR в параметре "&tvFilters". По умолчанию: "||".';
+
 $_lang['pdotools_prop_last'] = 'Номер последней итерации вывода результатов. По умолчанию он рассчитается автоматически, по формуле (total + first - 1).';
 $_lang['pdotools_prop_limit'] = 'Ограничение количества результатов выборки. Можно использовать "0".';
 $_lang['pdotools_prop_offset'] = 'Пропуск результатов от начала.';
